--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,9 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 
   a {
